--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,10 @@ compile_commands.json
 
 /build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/release/ASCIIVideoPlayer/default_video
 
+/build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/release/ASCIIVideoPlayer/SDL2
+/build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/release/ASCIIVideoPlayer/SDL2_mixer
+
+/build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/debug/ASCIIVideoPlayer/SDL2
+/build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/debug/ASCIIVideoPlayer/SDL2_mixer
+
 *.mp3
