Scrittura parte setup

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,6 @@ compile_commands.json
 /build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/ASCIIVideoPlayer/SDL2
 /build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/ASCIIVideoPlayer/SDL2_mixer
 
+build/Desktop_Qt_6_8_2_MinGW_64_bit-Release/release/Output
+
 *.mp3
